package ca.mcmaster.se2aa4.mazerunner;

public interface MazeSolverCommand {
    Path execute (Maze maze);
}
